--- a/src/main/resources/templates/produto/mensagemValidacao.html
+++ b/src/main/resources/templates/produto/mensagemValidacao.html
@@ -11,7 +11,7 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div class="" role="alert" th:if="${not #strings.isEmpty(mensagem)}">
+        <div class="alert alert-danger" role="alert" th:if="${not #strings.isEmpty(mensagem)}">
             <span th:text="${mensagem}"></span>
         </div>        
     </body>
