Segundo Commit CRUD thymeleaf

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -74,6 +74,7 @@ and open the template in the editor.
                                       </button>
                                     </div>
                                     <div class="modal-body">
+                                        <input type="hidden" class="form-control" name="id" value=""/>
                                         <div class="form-group">
                                           <label class="col-form-label">Nome:</label>
                                           <input type="text" class="form-control" name="nome" value=""/>
