Segundo Commit CRUD thymeleaf

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -80,15 +80,17 @@ and open the template in the editor.
                                         </div>
                                         <div class="form-group">
                                           <label class="col-form-label">Descrição:</label>
-                                          <input type="text" class="form-control" name="descricao" value=""/>
+                                          <textarea class="form-control" name="descricao" value="" rows="3"></textarea>
                                         </div>
-                                        <div class="form-group">
-                                          <label class="col-form-label">Preço Compra:</label>
-                                          <input type="text" class="form-control" name="precoCompra" value=""/>
-                                        </div>
-                                        <div class="form-group">
-                                          <label class="col-form-label">Preço Venda:</label>
-                                          <input type="text" class="form-control" name="precoVenda" value=""/>
+                                        <div class="row">
+                                            <div class="col form-group">
+                                              <label class="col-form-label">Preço Compra:</label>
+                                              <input type="text" class="form-control" name="precoCompra" value=""/>
+                                            </div>
+                                            <div class="col form-group">
+                                              <label class="col-form-label">Preço Venda:</label>
+                                              <input type="text" class="form-control" name="precoVenda" value=""/>
+                                            </div>
                                         </div>
                                         <div class="form-group">
                                           <label class="col-form-label">Quantidade:</label>
